// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures > a planned session that ended in pain three days ago 1`] = `
{
  "day": "training",
  "exercises": [
    "T1",
    "T2",
    "T3",
    "T4",
    "T5",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Back off, something is brewing",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 47,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* fingers: substantial problem this week",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 1,
    "days7": 1,
    "state": "ready",
    "sustainedWeeks": 0,
  },
  "session": "mobility · tier 1",
  "sheet": "main T1 20m = 20/90",
  "tone": "caution",
  "trend": "steady",
  "week": "Build · ✓_!__·_ · limit,-,mobility,-,-,volume,-",
}
`;

exports[`golden fixtures > beginner, two sessions a week 1`] = `
{
  "day": "rest",
  "exercises": [
    "B6",
    "B12",
    "B14",
  ],
  "grades": "4–5",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Rest day",
  "level": "Building a base",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "technique",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 48",
    "- A rest day in your plan. If you train anyway, this is the next session owed",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "technique · tier 2",
  "sheet": "warmup WU1 10m | main B6 60m | finish T1+T4+T5 10m = 80/90",
  "tone": "planned",
  "trend": "steady",
  "week": "Build · _✓__·__ · -,volume,-,-,technique,-,-",
}
`;

exports[`golden fixtures > elite boulderer, six days a week, campus available 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Time for an easy finger week",
  "level": "Elite",
  "monotony": {
    "flag": false,
    "value": 2.6,
  },
  "planned": "volume",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* 10 weeks straight of hard finger days",
  ],
  "recovery": {
    "chronic": "very-high",
    "days28": 23,
    "days7": 5,
    "state": "recovering",
    "sustainedWeeks": 10,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "caution",
  "trend": "steady",
  "week": "Build · ✓✓!_··· · limit,powerEndurance,fingerMaintenance,-,fingerStrength,volume,power",
}
`;

exports[`golden fixtures > finger injury history on file 1`] = `
{
  "day": "rest",
  "exercises": [
    "B6",
    "B12",
    "B14",
  ],
  "grades": "6B+–6C+",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Too many hard finger days",
  "level": "Advanced",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "powerEndurance",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* 16 hard finger days in 28d, ceiling 15",
    "- A rest day in your plan. If you train anyway, this is the next session owed",
  ],
  "recovery": {
    "chronic": "very-high",
    "days28": 16,
    "days7": 4,
    "state": "recovering",
    "sustainedWeeks": 6,
  },
  "session": "technique · tier 2",
  "sheet": "warmup WU1 10m | main B6 60m | finish T1+T4+T5 10m = 80/90",
  "tone": "caution",
  "trend": "steady",
  "week": "Build · ✓✓_·_·_ · limit,fingerStrength,-,powerEndurance,-,power,-",
}
`;

exports[`golden fixtures > four sessions a week, endurance as the stated weakness 1`] = `
{
  "day": "rest",
  "exercises": [
    "C2",
    "C6",
    "C1",
  ],
  "grades": "6B+–6C+",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Rest day",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "power",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 54",
    "- A rest day in your plan. If you train anyway, this is the next session owed",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "power · tier 4",
  "sheet": "warmup WU1 10m | main C2 75m | finish S12+S15 5m = 90/90",
  "tone": "planned",
  "trend": "steady",
  "week": "Build · ✓✓_·_·_ · limit,fingerMaintenance,-,power,-,powerEndurance,-",
}
`;

exports[`golden fixtures > hangboard day with sixty minutes to train 1`] = `
{
  "day": "training",
  "exercises": [
    "F1",
    "F2",
    "F6",
  ],
  "grades": null,
  "hangKg": "80–90 kg total",
  "hangTarget": "84 kg · progress",
  "headline": "Following the plan",
  "level": "Advanced",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerStrength",
  "readiness": {
    "index": 49,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers recovered · 7d",
    "- Readiness 49",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 3,
    "days7": 0,
    "state": "ready",
    "sustainedWeeks": 0,
  },
  "session": "fingerStrength · tier 5",
  "sheet": "warmup WU1 10m | warmup WU2 12m | main F1 33m | finish S12+S15 5m = 60/60 cut",
  "tone": "go",
  "trend": "gated: baseline",
  "week": "Build · ✓_!____ · limit,-,fingerStrength,-,-,-,-",
}
`;

exports[`golden fixtures > hangboard twice a week plus climbing, tested max 1`] = `
{
  "day": "complete",
  "exercises": [
    "T1",
    "T2",
    "T3",
    "T4",
    "T5",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Deload week",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "mobility",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* Week 4 of the cycle",
    "- Half the volume, same intensity",
    "- Every planned session this week is logged. Move, stretch, and let it sink in",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 8,
    "days7": 2,
    "state": "recovering",
    "sustainedWeeks": 7,
  },
  "session": "mobility · tier 1",
  "sheet": "main T1 15m = 15/90",
  "tone": "planned",
  "trend": "steady",
  "week": "Deload · ✓✓_____ · limit,deload,-,-,-,-,-",
}
`;

exports[`golden fixtures > indoor session with near-limit attempts logged 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 46,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers recovered · 2d",
    "- Readiness 46",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 1,
    "days7": 1,
    "state": "recovering",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "sharp",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > junior in a competition build-up 1`] = `
{
  "day": "training",
  "exercises": [
    "S10",
    "S11",
    "S13",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Spare the fingers",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "power",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* Fingers loaded 1d ago · needs 2d",
  ],
  "recovery": {
    "chronic": "very-high",
    "days28": 16,
    "days7": 4,
    "state": "recovering",
    "sustainedWeeks": 8,
  },
  "session": "antagonist · tier 2",
  "sheet": "warmup WU1 10m | warmup WU3 8m | main S10 60m = 78/90",
  "tone": "easy",
  "trend": "steady",
  "week": "Build · ✓✓!_·__ · power,compSim,antagonist,-,compSim,-,-",
}
`;

exports[`golden fixtures > junior in their first year, hangboard at home 1`] = `
{
  "day": "training",
  "exercises": [
    "B4",
    "B9",
    "B11",
  ],
  "grades": "4–5+",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Building a base",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "volume",
  "readiness": {
    "index": 49,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 49",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "volume · tier 3",
  "sheet": "warmup WU1 10m | main B4 75m | finish S12+S15 5m = 90/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✓_!_·__ · limit,-,volume,-,technique,-,-",
}
`;

exports[`golden fixtures > legacy added-weight sets and no bodyweight 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 48",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "gated: baseline",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > legacy added-weight sets with a bodyweight 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers recovered · 2d",
    "- Readiness 48",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 8,
    "days7": 2,
    "state": "ready",
    "sustainedWeeks": 5,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "gated: baseline",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > max hangs progressing after two sessions to plan 1`] = `
{
  "day": "training",
  "exercises": [
    "K4",
    "K5",
    "B3",
  ],
  "grades": "6C–7A",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Advanced",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "powerEndurance",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers recovered · 7d",
    "- Readiness 48",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 2,
    "days7": 0,
    "state": "ready",
    "sustainedWeeks": 0,
  },
  "session": "powerEndurance · tier 4",
  "sheet": "warmup WU1 10m | main K4 75m | finish S12+S15 5m = 90/90 cut",
  "tone": "go",
  "trend": "steady",
  "week": "Build · ✓_!__·_ · limit,-,powerEndurance,-,-,fingerStrength,-",
}
`;

exports[`golden fixtures > maximal hangboard session yesterday 1`] = `
{
  "day": "training",
  "exercises": [
    "B11",
  ],
  "grades": "5–6A",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Same session, easier",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "volume",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* Fingers loaded 1d ago",
    "- Readiness 48",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 1,
    "days7": 1,
    "state": "recovering",
    "sustainedWeeks": 0,
  },
  "session": "volume · tier 1 (eased 2)",
  "sheet": "warmup WU1 10m | main B11 75m | finish S12+S15 5m = 90/90 cut",
  "tone": "moderate",
  "trend": "easing",
  "week": "Build · ✗✓!__·_ · -,fingerMaintenance,volume,-,-,limit,-",
}
`;

exports[`golden fixtures > missed Monday, opened the app on Wednesday 1`] = `
{
  "day": "training",
  "exercises": [
    "C5",
    "B8",
    "C1",
  ],
  "grades": "6C+–7A",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "limit",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 54",
    "- Moved here from 21 Sep, which was missed",
    "- Finger maintenance drops this week: not enough days left",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "limit · tier 5",
  "sheet": "warmup WU1 10m | warmup WU2 12m | main C5 60m | finish S12+S15 5m = 87/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✗_!__·_ · -,-,limit,-,-,volume,-",
}
`;

exports[`golden fixtures > no profile at all 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "gated": "signals",
  },
  "reasons": [
    "- Fingers fresh",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "steady",
  "week": "Build · _✓!__·_ · -,limit,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > nothing logged at all 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Start easy",
  "level": "Intermediate",
  "monotony": {
    "gated": "sparse",
  },
  "planned": "limit",
  "readiness": {
    "gated": "history",
  },
  "reasons": [
    "* No finger history yet",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "unknown",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "moderate",
  "trend": "gated: baseline",
  "week": "Settle in · __!__·_ · -,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > one wellness entry ever 1`] = `
{
  "day": "training",
  "exercises": [
    "B14",
    "B6",
    "B12",
  ],
  "grades": "6A–6B",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Deload week",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "deload",
  "readiness": {
    "gated": "signals",
  },
  "reasons": [
    "* Week 4 of the cycle",
    "- Half the volume, same intensity",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "deload · tier 2",
  "sheet": "warmup WU1 10m | main B14 30m | finish T1+T4+T5 10m = 50/90",
  "tone": "planned",
  "trend": "easing",
  "week": "Deload · ✓_!____ · limit,-,deload,-,-,-,-",
}
`;

exports[`golden fixtures > open shoulder injury 1`] = `
{
  "day": "training",
  "exercises": [
    "T1",
    "T2",
    "T3",
    "T4",
    "T5",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Rehab or easy day",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "deload",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* Open injury: shoulder",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "mobility · tier 1",
  "sheet": "main T1 15m = 15/90",
  "tone": "caution",
  "trend": "easing",
  "week": "Deload · ✓_!____ · limit,-,mobility,-,-,-,-",
}
`;

exports[`golden fixtures > outdoor session with near-limit attempts logged 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 46,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers recovered · 2d",
    "- Readiness 46",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 1,
    "days7": 1,
    "state": "recovering",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "sharp",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > profile but no finger test 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 48,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 48",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "gated: baseline",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > rope climber with a trip in ten weeks 1`] = `
{
  "day": "training",
  "exercises": [
    "K5",
    "K4",
    "K3",
  ],
  "grades": "6b+–6c+",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "powerEndurance",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 54",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "powerEndurance · tier 4",
  "sheet": "warmup WU1 10m | main K5 75m | finish S12+S15 5m = 90/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✓_!_··_ · fingerStrength,-,powerEndurance,-,fingerStrength,powerEndurance,-",
}
`;

exports[`golden fixtures > same climber, but every session is genuinely hard on the fingers 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- 10 weeks straight of hard finger days, so an easy finger day",
    "- Fingers recovered · 2d",
    "- Readiness 54",
  ],
  "recovery": {
    "chronic": "elevated",
    "days28": 11,
    "days7": 2,
    "state": "recovering",
    "sustainedWeeks": 10,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > substantial OSTRC finger problem this week 1`] = `
{
  "day": "training",
  "exercises": [
    "T1",
    "T2",
    "T3",
    "T4",
    "T5",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Back off, something is brewing",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "deload",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* fingers: substantial problem this week",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "mobility · tier 1",
  "sheet": "main T1 15m = 15/90",
  "tone": "caution",
  "trend": "easing",
  "week": "Deload · ✓_!____ · limit,-,mobility,-,-,-,-",
}
`;

exports[`golden fixtures > test stopped because of pain last week 1`] = `
{
  "day": "training",
  "exercises": [
    "T1",
    "T2",
    "T3",
    "T4",
    "T5",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Back off, something is brewing",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "deload",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* fingers: substantial problem this week",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "mobility · tier 1",
  "sheet": "main T1 15m = 15/90",
  "tone": "caution",
  "trend": "easing",
  "week": "Deload · ✓_!____ · limit,-,mobility,-,-,-,-",
}
`;

exports[`golden fixtures > three sessions a week indoors, ordinary finger RPE 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 54",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;

exports[`golden fixtures > trains six days a week at the same load every day 1`] = `
{
  "day": "training",
  "exercises": [
    "B14",
    "B6",
    "B12",
  ],
  "grades": "6A–6B",
  "hangKg": null,
  "hangTarget": null,
  "headline": "Deload week",
  "level": "Intermediate",
  "monotony": {
    "flag": true,
    "value": 0,
  },
  "planned": "deload",
  "readiness": {
    "index": 51,
    "label": "Normal",
    "sustained": [],
  },
  "reasons": [
    "* Week 4 of the cycle",
    "- Half the volume, same intensity",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "deload · tier 2",
  "sheet": "warmup WU1 10m | main B14 30m | finish T1+T4+T5 10m = 50/90",
  "tone": "planned",
  "trend": "steady",
  "week": "Deload · ✓✓!·___ · limit,deload,deload,mobility,-,-,-",
}
`;

exports[`golden fixtures > two months of poor sleep and high stress 1`] = `
{
  "day": "training",
  "exercises": [
    "F4",
  ],
  "grades": null,
  "hangKg": null,
  "hangTarget": null,
  "headline": "Following the plan",
  "level": "Intermediate",
  "monotony": {
    "gated": "frequency",
  },
  "planned": "fingerMaintenance",
  "readiness": {
    "index": 54,
    "label": "Normal",
    "sustained": [
      "sleep",
      "fatigue",
      "soreness",
      "stress",
    ],
  },
  "reasons": [
    "- Fingers fresh",
    "- Readiness 54",
  ],
  "recovery": {
    "chronic": "ok",
    "days28": 0,
    "days7": 0,
    "state": "fresh",
    "sustainedWeeks": 0,
  },
  "session": "fingerMaintenance · tier 1",
  "sheet": "warmup WU1 10m | main F4 15m | then B6 55m | finish T1+T4+T5 10m = 90/90",
  "tone": "go",
  "trend": "easing",
  "week": "Build · ✓_!__·_ · limit,-,fingerMaintenance,-,-,volume,-",
}
`;
